CHAIN-9 added company table
